--- a/drawing.html
+++ b/drawing.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>US History</title>
+        <title>US History Map Game</title>
         <link rel="icon" type="image/png" href="Downloads/USH_Map-removebg-preview.png"/>
     </head>
     <body>
