--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>U.S. sHistory Map Game</title>
+        <title>U.S. History Map Game</title>
         <link rel="icon" type="image/png" href="Downloads/USH_Map-removebg-preview.png"/>
     </head>
     <body>
-        <span style="font-size: 200%; position: absolute; left: 38%;"><strong>European Exloration to the US</strong></span>
+        <span style="position: absolute; left: 38%;"><strong>European Exloration to the US</strong></span>
         <div id="grid" style="position: absolute; width: 90%; height: 80%; top: 10%; left: 5%; border: black 1px solid; overflow: hidden;">
             <div id="ocean" style="width: 100%; height: 100%; background-color: rgb(0, 174, 255); display: none;"></div>
             <div id="mapGrid" style="position: absolute; width: 500%; height: 500%; left: 0%; top: 0%;"></div>
@@ -15,7 +15,7 @@
         </div>
         <canvas id="playerCanvas" style="position: absolute;"></canvas>
         <img id="photo" style="position: absolute; display: none;" src="https://www.astaichung.com/uploads/1/3/6/3/13638525/editor/mr-ethan-dombkowski2.jpg?1598862181">
-        <div id="grid2" style="position: absolute; width: 90%; height: 80%; top: 10%; left: 5%; border: black 1px solid; font-size: 125%; overflow: hidden;">
+        <div id="grid2" style="position: absolute; width: 90%; height: 80%; top: 10%; left: 5%; border: black 1px solid;overflow: hidden;">
             <div id="checkBox" style="position: absolute; top: 0%; right: 0%; background-color: rgba(231, 231, 231, 0.8); width: 15%; height: 18.5%; transition: top 1s;">
                 <span style="position: absolute; left: 12%;"><strong>European Colonization</strong></span><br>
                 <span style="opacity: 0;">ss</span><input type="checkbox" id="s" value="Spanish"><span style="color: blueviolet;">Spanish</span>
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div id="reasonPage" style="position: absolute; width: 50%; height: 50%; background-color: rgba(0, 0, 0, 0.8); left: 25%; bottom: 100%; border: 3px black solid; overflow: hidden;">
-            <div id="slideSpanish" style="position: absolute; width: 100%; height: 100%; background-color: blueviolet; text-align: center; transition: left 1s; color: white; font-size: 125%;">
+            <div id="slideSpanish" style="position: absolute; width: 100%; height: 100%; background-color: blueviolet; text-align: center; transition: left 1s; color: white;">
                 <br><strong>Spanish</strong><br><br>
                 After Portugal's success at traveling across the Sahara desert(see the Portugal slide for more info),<br>
                 the Spanish thought that they could do the same. This led to them also develop better sailing and<br>
@@ -43,7 +43,7 @@
                 Europeans to have access to more lands, which defined their status, so many Spanish are trying<br>
                 to get to the Americas as a way to improve their status.
             </div>
-            <div id="slideEnglish" style="position: absolute; width: 100%; height: 100%; background-color: green; text-align: center; transition: left 1s; color: white; font-size: 125%;">
+            <div id="slideEnglish" style="position: absolute; width: 100%; height: 100%; background-color: green; text-align: center; transition: left 1s; color: white;">
                 <br><strong>British (Before 13 Colonies)</strong><br><br>
                 The British colonies were split into two parts at first when they came to the Americas.<br>
                 One of them is at the Northeast part of the United States, consisting of modern day Maine,<br>
@@ -59,7 +59,7 @@
                 tobacco. The massive tobacco cultivation and its economic success drove even more British to come to<br>
                 the Americas with the hopes of becoming wealthier.  
             </div>
-            <div id="slideFrench" style="position: absolute; width: 100%; height: 100%; background-color: orange; text-align: center; transition: left 1s; font-size: 125%;">
+            <div id="slideFrench" style="position: absolute; width: 100%; height: 100%; background-color: orange; text-align: center; transition: left 1s;">
                 <br><strong>French</strong><br><br>
                 Like all other European countries, France is trying to find a shorter, better route to Asia to access<br>
                 the Silk Road trades. They traveled across the Americas in hopes of finding the Northwest passage,<br>
@@ -75,7 +75,7 @@
                 However, the fur trade led to a massive reduction in beaver population, impacted the Native Americans<br>
                 with food depletions, and destroyed various natural environments and habitats.
             </div>
-            <div id="slideDutch" style="position: absolute; width: 100%; height: 100%; background-color: red; text-align: center; transition: left 1s; color: white; font-size: 125%;">
+            <div id="slideDutch" style="position: absolute; width: 100%; height: 100%; background-color: red; text-align: center; transition: left 1s; color: white;">
                 <br><br><strong>Dutch</strong><br><br>
                 The Dutch came to the Americas mostly to increase the volume of their trades, so they only<br>
                 colonized New Jersey, Long Island(New York), and Delaware, which were all coastal lands that<br>
@@ -88,7 +88,7 @@
                 in the Dutch colonies, they could just make trades with the Jews in the Ottoman Empire,<br>
                 eliminating the need to explore the west of the Americas.
             </div>
-            <div id="slidePortugal" style="position: absolute; width: 100%; height: 100%; background-color: rgb(20, 163, 182); text-align: center; transition: left 1s; font-size: 125%;">
+            <div id="slidePortugal" style="position: absolute; width: 100%; height: 100%; background-color: rgb(20, 163, 182); text-align: center; transition: left 1s;">
                 <strong>Portugal</strong><br><br>
                 Due to the fall of Constantinople, the Ottoman Empire now controls most of the trades in the<br>
                 Silk Road. Since most of the goods with better qualities were traded first in the beginning of<br>
@@ -107,7 +107,7 @@
                 South American Spanish-speaking countries that it is surrounded by. Moreover, it also started the <br>
                 Age of Exploration and caused the fall of the Mali Empire.
             </div>
-            <div id="slideColonies" style="position: absolute; width: 100%; height: 100%; background-color: blue; text-align: center; transition: left 1s; color: white; font-size: 125%;">
+            <div id="slideColonies" style="position: absolute; width: 100%; height: 100%; background-color: blue; text-align: center; transition: left 1s; color: white;">
                 <br><br><strong>13 Colonies</strong><br><br>
                 The original 13 colonies were the result of the mergence of the two British colonies. After<br>
                 the British acquired the two lands of the Americas as their colonies, they found out that the<br>
@@ -125,9 +125,9 @@
         </div>
         <div id="tooltip" style="position: absolute; width: 65px; height: auto; background-color: rgba(0, 0, 0, 0.8); color: white; text-align: center; border-radius: 10%; border: wheat 2px solid; display: none;">
             <span id="states">Hi</span><br>
-            <span id="moreInfo" style="font-size: 50%;">None</span><br>
+            <span id="moreInfo">None</span><br>
         </div>
-        <div id="beforeAfter" style="position: absolute; width: 60%; height: 75%; background-color: black; left: 20%; bottom: 100%; text-align: center; font-size: 125%; color: white; transition: bottom 1s; border: wheat 3px solid; overflow: scroll; ">
+        <div id="beforeAfter" style="position: absolute; width: 60%; height: 75%; background-color: black; left: 20%; bottom: 100%; text-align: center; color: white; transition: bottom 1s; border: wheat 3px solid; overflow: scroll; ">
             <button style="position: absolute; top: 0%; left: 0%; width: 80px; height: 22.5px; background-color: rgb(241, 183, 94);" onclick="closeBeforeAfter();"><strong>Close</strong></button>
             <strong><span id="stateName">Jamestown</span></strong><br><br><!--bottom=12.5% later-->
             <span id="stateInfo"></span><br><br>
@@ -137,8 +137,8 @@
             <input type="range" min="1" max="2" value="1" id="timeline" style="width: 70%;">
         </div>
         <button style="position: absolute; right: 4.9%; bottom: 9.85%; width: 120px; height: 30px; background-color: rgb(241, 183, 94);" onclick="locateMap();"><strong>Locate Map</strong></button>
-        <div id="infoPage" style="position: absolute; bottom: 100%; left: 0%; width: 100%; height: 100%; background-color: beige; opacity: 0.85; text-align: center; font-size: 175%;">
-            <br><span style="font-size: 150%;"><strong>Game Information</strong></span><br><br>
+        <div id="infoPage" style="position: absolute; bottom: 100%; left: 0%; width: 100%; height: 100%; background-color: beige; opacity: 0.85; text-align: center;">
+            <br><span><strong>Game Information</strong></span><br><br>
             <strong>Createad By</strong><br>Alan Lin<br><br>
             <strong>Game Description</strong><br>
             A game where you can learn the European colonization(Spanish, British, French, and Dutch) of the Americas.<br>
