--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             Timline: <span id="colonizedTime"></span><br>
             <input type="range" min="1" max="2" value="1" id="timeline" style="width: 70%;">
         </div>
-        <button style="position: absolute; right: 4.9%; bottom: 9.85%; width: 100px; height: 10px; background-color: rgb(241, 183, 94);" onclick="locateMap();"><strong>Locate Map</strong></button>
+        <button style="position: absolute; right: 4.9%; bottom: 9.85%; width: 5%; height: 2.5%; background-color: rgb(241, 183, 94);" onclick="locateMap();"><strong>Locate Map</strong></button>
         <div id="infoPage" style="position: absolute; bottom: 100%; left: 0%; width: 100%; height: 100%; background-color: beige; opacity: 0.85; text-align: center;">
             <br><span><strong>Game Information</strong></span><br><br>
             <strong>Createad By</strong><br>Alan Lin<br><br>
