change img file name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>U.S. History Map Game</title>
-        <link rel="icon" type="image/png" href="Downloads/USH_Map-removebg-preview.png"/>
+        <link rel="icon" type="image/png" href="Cheng-I-Lin.github.io/USH_Map-removebg-preview.png"/>
     </head>
     <body>
         <span style="position: absolute; left: 38%; font-size: 170%;"><strong>European Exloration to the US</strong></span>
