--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html style="height: 100%;">
     <head>
-        <meta charset="UTF-8">
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>U.S. History Map Game</title>
         <link rel="icon" type="image/png" href="USH_Map-removebg-preview.png"/>
     </head>
     <body>
-        <span style="position: absolute; left: 38%; font-size: 170;"><strong>European Exploration to the US</strong></span>
+        <span style="position: absolute; left: 38%; font-size: 170%;"><strong>European Exploration to the US</strong></span>
         <div id="grid" style="position: absolute; width: 90%; height: 80%; top: 10%; left: 5%; border: black 1px solid; overflow: hidden;">
             <div id="ocean" style="width: 100%; height: 100%; background-color: rgb(0, 174, 255); display: none;"></div>
             <div id="mapGrid" style="position: absolute; width: 500%; height: 500%; left: 0%; top: 0%;"></div>
@@ -137,8 +137,8 @@
             <input type="range" min="1" max="2" value="1" id="timeline" style="width: 70%;">
         </div>
         <button style="position: absolute; right: 4.9%; bottom: 9.85%; width: 100px; height: 30px; background-color: rgb(241, 183, 94);" onclick="locateMap();"><strong>Locate Map</strong></button>
-        <div id="infoPage" style="position: absolute; bottom: 100%; left: 0%; width: 100%; height: 100%; background-color: beige; opacity: 0.85; text-align: center; font-size: 145;">
-            <br><span style="font-size: 135;"><strong>Game Information</strong></span><br><br>
+        <div id="infoPage" style="position: absolute; bottom: 100%; left: 0%; width: 100%; height: 100%; background-color: beige; opacity: 0.85; text-align: center; font-size: 145%;">
+            <br><span style="font-size: 135%;"><strong>Game Information</strong></span><br><br>
             <strong>Createad By</strong><br>Alan Lin<br><br>
             <strong>Game Description</strong><br>
             A game where you can learn the European colonization(Spanish, British, French, and Dutch) of the Americas.<br>
