--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
         <title>U.S. History Map Game</title>
         <link rel="icon" type="image/png" href="USH_Map-removebg-preview.png"/>
     </head>
     <body>
-        <span style="position: absolute; left: 38%; font-size: 170%;"><strong>European Exploration to the US</strong></span>
+        <span style="position: absolute; left: 38%; font-size: 170%;"><strong>European Explorations to the US</strong></span>
         <div id="grid" style="position: absolute; width: 90%; height: 80%; top: 10%; left: 5%; border: black 1px solid; overflow: hidden;">
             <div id="ocean" style="width: 100%; height: 100%; background-color: rgb(0, 174, 255); display: none;"></div>
             <div id="mapGrid" style="position: absolute; width: 500%; height: 500%; left: 0%; top: 0%;"></div>
