--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
         <button style="position: absolute; right: 4.9%; bottom: 9.85%; width: 100px; height: 30px; background-color: rgb(241, 183, 94);" onclick="locateMap();"><strong>Locate Map</strong></button>
         <div id="infoPage" style="position: absolute; bottom: 100%; left: 0%; width: 100%; height: 100%; background-color: beige; opacity: 0.85; text-align: center; font-size: large;">
-            <br><span style="font-size: large;"><strong>Game Information</strong></span><br><br>
+            <br><span style="font-size: x-large;"><strong>Game Information</strong></span><br><br>
             <strong>Createad By</strong><br>Alan Lin<br><br>
             <strong>Game Description</strong><br>
             A game where you can learn the European colonization(Spanish, British, French, and Dutch) of the Americas.<br>
