--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
         <canvas id="playerCanvas" style="position: absolute;"></canvas>
         <img id="photo" style="position: absolute; display: none;" src="https://www.astaichung.com/uploads/1/3/6/3/13638525/editor/mr-ethan-dombkowski2.jpg?1598862181">
-        <div id="grid2" style="position: absolute; width: 90%; height: 80%; top: 10%; left: 5%; border: black 1px solid;overflow: hidden;">
-            <div id="checkBox" style="position: absolute; top: 0%; right: 0%; background-color: rgba(231, 231, 231, 0.8); width: 15%; height: 18.5%; transition: top 1s; font-size: 0.75vw;">
+        <div id="grid2" style="position: absolute; width: 90%; height: 80%; top: 10%; left: 5%; font-size: 1.05vw; border: black 1px solid;overflow: hidden;">
+            <div id="checkBox" style="position: absolute; top: 0%; right: 0%; background-color: rgba(231, 231, 231, 0.8); width: 15%; height: 18.5%; transition: top 1s;">
                 <span style="position: absolute; left: 12%;"><strong>European Colonization</strong></span><br>
                 <span style="opacity: 0;">ss</span><input type="checkbox" id="s" value="Spanish"><span style="color: blueviolet;">Spanish</span>
                 <input type="checkbox" id="e" value="English"><span style="color: green;">British</span><br>
@@ -138,7 +138,7 @@
         </div>
         <button style="position: absolute; right: 4.9%; bottom: 9.85%; width: 100px; height: 30px; background-color: rgb(241, 183, 94);" onclick="locateMap();"><strong>Locate Map</strong></button>
         <div id="infoPage" style="position: absolute; bottom: 100%; left: 0%; width: 100%; height: 100%; background-color: beige; opacity: 0.85; text-align: center; font-size: 1.45vw;">
-            <br><span style="font-size: 1.55vw;"><strong>Game Information</strong></span><br><br>
+            <br><span style="font-size: 1.70vw;"><strong>Game Information</strong></span><br><br>
             <strong>Createad By</strong><br>Alan Lin<br><br>
             <strong>Game Description</strong><br>
             A game where you can learn the European colonization(Spanish, British, French, and Dutch) of the Americas.<br>
