--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="icon" type="image/png" href="USH_Map-removebg-preview.png"/>
     </head>
     <body>
-        <span style="position: absolute; left: 38%; font-size: 1.7vw;"><strong>European Explorations to the US</strong></span>
+        <span style="position: absolute; left: 38%; font-size: 1.7vw;"><strong>European Explorations to the U.S.</strong></span>
         <div id="grid" style="position: absolute; width: 90%; height: 80%; top: 10%; left: 5%; border: black 1px solid; overflow: hidden;">
             <div id="ocean" style="width: 100%; height: 100%; background-color: rgb(0, 174, 255); display: none;"></div>
             <div id="mapGrid" style="position: absolute; width: 500%; height: 500%; left: 0%; top: 0%;"></div>
@@ -15,7 +15,7 @@
         </div>
         <canvas id="playerCanvas" style="position: absolute;"></canvas>
         <img id="photo" style="position: absolute; display: none;" src="https://www.astaichung.com/uploads/1/3/6/3/13638525/editor/mr-ethan-dombkowski2.jpg?1598862181">
-        <div id="grid2" style="position: absolute; width: 90%; height: 80%; top: 10%; left: 5%; font-size: 0.75vw; border: black 1px solid;overflow: hidden;">
+        <div id="grid2" style="position: absolute; width: 90%; height: 80%; top: 10%; left: 5%; font-size: 0.8vw; border: black 1px solid;overflow: hidden;">
             <div id="checkBox" style="position: absolute; top: 0%; right: 0%; background-color: rgba(231, 231, 231, 0.8); width: 15%; height: 18.5%; transition: top 1s;">
                 <span style="position: absolute; left: 12%;"><strong>European Colonization</strong></span><br>
                 <span style="opacity: 0;">ss</span><input type="checkbox" id="s" value="Spanish"><span style="color: blueviolet;">Spanish</span>
