--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
         <canvas id="playerCanvas" style="position: absolute;"></canvas>
         <img id="photo" style="position: absolute; display: none;" src="https://www.astaichung.com/uploads/1/3/6/3/13638525/editor/mr-ethan-dombkowski2.jpg?1598862181">
-        <div id="grid2" style="position: absolute; width: 90%; height: 80%; top: 10%; left: 5%; font-size: 1vw; border: black 1px solid;overflow: hidden;">
-            <div id="checkBox" style="position: absolute; top: 0%; right: 0%; background-color: rgba(231, 231, 231, 0.8); width: 15%; height: 18.5%; transition: top 1s;">
+        <div id="grid2" style="position: absolute; width: 90%; height: 80%; top: 10%; left: 5%; border: black 1px solid;overflow: hidden;">
+            <div id="checkBox" style="position: absolute; top: 0%; right: 0%; background-color: rgba(231, 231, 231, 0.8); width: 15%; height: 18.5%; transition: top 1s; font-size: 1vw;">
                 <span style="position: absolute; left: 12%;"><strong>European Colonization</strong></span><br>
                 <span style="opacity: 0;">ss</span><input type="checkbox" id="s" value="Spanish"><span style="color: blueviolet;">Spanish</span>
                 <input type="checkbox" id="e" value="English"><span style="color: green;">British</span><br>
