--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html style="height: 100%;">
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
         <title>U.S. History Map Game</title>
         <link rel="icon" type="image/png" href="USH_Map-removebg-preview.png"/>
     </head>
