index file added

--- a/homePage.html
+++ b/homePage.html
@@ -4,6 +4,7 @@
         <title>Home Page</title>
     </head>
     <body>
-        <a href="index.html"></a>
+        <h1>Home Page</h1>
+        <a href="US-History-Map\index.html">Hello</a>
     </body>
 </html>
