--- a/homePage.html
+++ b/homePage.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Home Page</h1>
-        <a href="US-History-Map\index.html">Hello</a>
+        <a href="index.html">Hello</a>
     </body>
 </html>
