--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home Page</title>
+        <title>Home Page of Games</title>
+        <link rel="stylesheet" href="style.css" />
+        <link rel="icon" type="image/png" href="Project_Topics_-_Google_Slides_-_Google_Chrome_2022_1_10_上午_12_07_19__2_-removebg-preview (1).png"/>
     </head>
     <body>
+        <!--Can build like a slide show to present games and myself -->
         <h1>Home Page</h1>
         <a href="https://cheng-i-lin.github.io/US-History-Map/">ssssssssssssssssssssssssss</a>
+        <a href="https://cheng-i-lin.github.io/Air-Pollution-Quiz/">hello</a>
+        <!--<a href="">Bomb</a>-->
+        <div id="slideContainer">
+            <div id="intro">
+
+            </div>
+            <div id="mapGame">
+
+            </div>
+            <div id="airQuiz">
+
+            </div>
+            <div id="bombGame">
+
+            </div>
+            <div id="toBeContinue">
+                <!--Shows what's coming next-->
+
+            </div>
+            <div id="slideLeft"></div>
+            <div id="slideRight"></div>
+        </div>
+        <script src="homepageScript.js"></script>
     </body>
 </html>
