--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="intro">
                 <!--Think of a better title than introduction-->
                 <div class="textContainer">
-                    <h1>Swipe to See Projects</h1><br>  
+                    <h1>Swipe to See Projects...</h1><br>  
                 </div>              
             </div>
             <div id="mapGame">
