--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="viewport" content="width=device-width, initial-scale=1">
         <title>Home Page of Projects</title>
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
         <link rel="icon" type="image/png" href="Project_Topics_-_Google_Slides_-_Google_Chrome_2022_1_10_上午_12_07_19__2_-removebg-preview (1).png"/>
     </head>
     <body>
