--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="height: 100%;">
+<html>
     <head>
         <title>Home Page of Projects</title>
         <link rel="stylesheet" href="style.css" />
