--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <!--<a href="">Bomb</a>-->
-        <div id="introBanner">
+        <div class="allDiv" id="introBanner" >
             <!--Decrease opacity of the image-->
             <img id="introImg" src="Project_Topics_-_Google_Slides_-_Google_Chrome_2022_1_10_上午_12_07_19__2_-removebg-preview (1).png">
             <div id="overlayText">
@@ -19,16 +19,7 @@
                 By: Cheng-I Lin
             </div>
         </div>
-        <!--Navigation on the top of the page, placed after banner to show the border line at bottom for separation-->
-        <div id="topNavigaion">
-            <a class="navigationLinks" href="#">Home Page of Projects</a>
-            <!--Use href=# and id name to link to specific objects-->
-            <a class="navigationLinks" href="#aboutMe">About Me</a>
-            <a class="navigationLinks" href="#whyCS">Why Computer Science</a>
-            <a class="navigationLinks" href="#slideContainer">My Projects</a>
-            <a class="navigationLinks" href="#footer">Contact Information</a>
-        </div>
-        <section id="aboutMe">
+        <section class="allDiv" id="aboutMe">
             <div id="decorationLineTop"></div>
             <div id="decorationBorderTop"></div>
             <div id="aboutMeText">
@@ -54,7 +45,7 @@
             <div id="decorationLineBottom"></div>
             <div id="decorationBorderBottom"></div>
         </section>
-        <div id="slideContainer">
+        <div class="allDiv" id="slideContainer">
             <div id="intro">
                 <div class="imgContainer">
                     <img class="slideImg">
@@ -171,7 +162,16 @@
             <div class="slideCircle" id="slide3"></div>
             <div class="slideCircle" id="slide4"></div>
         </div>
-        <footer id="footer">
+        <!--Navigation on the top of the page, placed after banner to show the border line at bottom for separation-->
+        <div class="allDiv" id="topNavigaion">
+            <a class="navigationLinks" href="#">Home Page of Projects</a>
+            <!--Use href=# and id name to link to specific objects-->
+            <a class="navigationLinks" href="#aboutMe">About Me</a>
+            <a class="navigationLinks" href="#whyCS">Why Computer Science</a>
+            <a class="navigationLinks" href="#slideContainer">My Projects</a>
+            <a class="navigationLinks" href="#footer">Contact Information</a>
+        </div>
+        <footer class="allDiv" id="footer">
             <br><br><h1>Contact Information</h1>
             Personal Email: alan.lin.1118@gmail.com<br>
             School Email: 23alanl@ast.tc.edu.tw<br><br><br>
