--- a/index.html
+++ b/index.html
@@ -124,7 +124,32 @@
                 </div>
             </div>
             <div id="bombGame">
-
+                <div class="imgContainer">
+                    <img class="slideImg">
+                </div>
+                <div class="textContainer">
+                    <!--See if want to make it shorter-->
+                    <h1>Where's the Bomb</h1><br>
+                    <strong>Game Inspiration:</strong><br>
+                    Growing up, I was always fascinated by the game "Minesweeper", as it allows players to play a puzzling, complex
+                    game that requires some thoughts. Now I have the ability to create and code programs, I have decided to try to
+                    create a Minesweeper game of my own. However, instead of showing the number of bombs around the tiles, I changed
+                    it so that it would show the distance away from the closest bomb. To make it even more interesting, I also added 
+                    different setups of the game that allow the users to choose the size of the game and the number of bombs. Moreover,
+                    I incorporated various different game modes that the player can choose from, so that they could experience different
+                    ways of playing the game.
+                    <br><br>
+                    <strong>Game Outline/Instruction:</strong><br>
+                    First, by clicking next on the intro page, where all the instructions are stated, the setup page would show up, allowing
+                    the players to choose the size of the game tiles and the number of bombs. After that, the player can choose the game mode
+                    to play: Regular, Timed(Easy), Timed(Medium), Timed(Hard), Vanishing, Hidden, and Limited Moves. The objective of this game
+                    is to click on the different tiles on the screen, which would make the tile disappear, leaving behind a number, which shows
+                    the distance(number of tiles) to the closet bomb. After the player clears all the tiles, leaving only the bomb tile untouched,
+                    the player wins the game. However, if the player accidentally pressed the bomb tile, then the game ends with the player losing.
+                    After each round of game, a restart screen would pop up that allows the player to restart the game and play again.
+                    <br><br>
+                    <strong><a class="gameLink" href="https://cheng-i-lin.github.io/Finding_Bomb/">Click here to play Where's the Bomb now...</a></strong>
+                </div>
             </div>
             <div id="toBeContinue">
                 <div class="imgContainer">
