--- a/index.html
+++ b/index.html
@@ -166,7 +166,6 @@
                     <br><br>
                     <strong>Current Projects in Work:</strong><br>
                     <ul>
-                        <li>Where's the Bomb?</li>
                         <li>Multitasking</li>
                         <li>Driving Force</li>
                         <li>Dynamic Information Network</li>
@@ -186,6 +185,7 @@
             <div class="slideCircle" id="slide2"></div>
             <div class="slideCircle" id="slide3"></div>
             <div class="slideCircle" id="slide4"></div>
+            <div class="slideCircle" id="slide5"></div>
         </div>
         <!--Navigation on the top of the page, placed after banner to show the border line at bottom for separation-->
         <div class="allDiv" id="topNavigaion">
