--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     </head>
     <body>
         <!--<a href="">Bomb</a>-->
-        <div class="allDiv" id="introBanner" >
+        <div id="introBanner" >
             <!--Decrease opacity of the image-->
-            <img id="introImg" src="Project_Topics_-_Google_Slides_-_Google_Chrome_2022_1_10_上午_12_07_19__2_-removebg-preview (1).png">
-            <div id="overlayText">
+            <img class="allDiv" id="introImg" src="Project_Topics_-_Google_Slides_-_Google_Chrome_2022_1_10_上午_12_07_19__2_-removebg-preview (1).png">
+            <div class="allDiv" id="overlayText">
                 <br><br><br><br><br><br><h1>Home Page of Projects</h1><br>
                 By: Cheng-I Lin
             </div>
         </div>
-        <section class="allDiv" id="aboutMe">
+        <section id="aboutMe">
             <div id="decorationLineTop"></div>
             <div id="decorationBorderTop"></div>
-            <div id="aboutMeText">
+            <div id="aboutMeText" class="allDiv">
                 <br><br><br><h1>About Me</h1>
                 Welcome to my home page site where I keep all of the projects that I had previously created. My name is <strong>Cheng-I(Alan) Lin</strong>
                 and I am passionate about computer science and its various appliances. I attend the school of <a href="https://www.astaichung.com/"><strong>AST</strong></a>, 
@@ -45,13 +45,13 @@
             <div id="decorationLineBottom"></div>
             <div id="decorationBorderBottom"></div>
         </section>
-        <div class="allDiv" id="slideContainer">
+        <div id="slideContainer">
             <div id="intro">
-                <div class="imgContainer">
-                    <img class="slideImg">
+                <div class="imgContainer" class="allDiv">
+                    <img class="slideImg" class="allDiv">
                 </div>
                 <!--Think of a better title than introduction-->
-                <div class="textContainer">
+                <div class="textContainer" class="allDiv">
                     <h1>My Projects</h1><br>  
                     Swipe to see the various games, designs, and projects that I have made over the past years by clicking
                     the arrows on either side of the screen. Those projects include<br>
@@ -75,10 +75,10 @@
                 </div>              
             </div>
             <div id="mapGame">
-                <div class="imgContainer">
-                    <img class="slideImg">
+                <div class="imgContainer" class="allDiv">
+                    <img class="slideImg" class="allDiv">
                 </div>
-                <div class="textContainer">   
+                <div class="textContainer" class="allDiv">   
                     <h1>U.S. History Map Game</h1><br>
                     <strong>Game Inspiration:</strong><br>
                     During my United States history class back in school, my teacher assigned us to create a project that would
@@ -100,10 +100,10 @@
                 </div>
             </div>
             <div id="airQuiz">
-                <div class="imgContainer">
-                    <img class="slideImg">
+                <div class="imgContainer" class="allDiv">
+                    <img class="slideImg" class="allDiv">
                 </div>
-                <div class="textContainer">
+                <div class="textContainer" class="allDiv">
                     <h1>QuestionnAIRe</h1><br>
                     <strong>Game Inspiration:</strong><br>
                     Taiwan, my home country, is suffering from the terrible air pollutions that are polluting the entire
@@ -124,9 +124,9 @@
                     <strong><a class="gameLink" href="https://cheng-i-lin.github.io/Air-Pollution-Quiz/">Click here to play QuestionnAIRe now...</a></strong>
                 </div>
             </div>
-            <div id="bombGame">
-                <div class="imgContainer">
-                    <img class="slideImg">
+            <div id="bombGame" class="allDiv">
+                <div class="imgContainer" class="allDiv">
+                    <img class="slideImg" class="allDiv">
                 </div>
                 <div class="textContainer">
                     <!--See if want to make it shorter-->
@@ -162,10 +162,10 @@
                 
             </div>
             <div id="toBeContinue">
-                <div class="imgContainer">
-                    <img class="slideImg">
+                <div class="imgContainer" class="allDiv">
+                    <img class="slideImg" class="allDiv">
                 </div>
-                <div class="textContainer">
+                <div class="textContainer" class="allDiv">
                     <!--Shows what's coming next-->
                     <h1>Upcoming Projects</h1><br>
                     Here is the list of all of the current projects that I am working on in this very moment. The list includes
@@ -218,7 +218,7 @@
             <a class="footerIcon" href="https://www.gmail.com"><i class="fa fa-google"></i></a>
             <a class="footerIcon" href="https://www.instagram.com/batman_aka_alanawesome/"><i class="fa fa-instagram"></i></a>
         </footer>
-        <h1 id="hi" style="position: absolute; top: 200%; background-color: beige;">hiiiiiiii</h1>
+        <!--<h1 id="hi" style="position: absolute; top: 200%; background-color: beige;">hiiiiiiii</h1>-->
         <script src="homepageScript.js"></script>
     </body>
 </html>
