--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <a class="footerIcon" href="https://www.gmail.com"><i class="fa fa-google"></i></a>
             <a class="footerIcon" href="https://www.instagram.com/batman_aka_alanawesome/"><i class="fa fa-instagram"></i></a>
         </footer>
-        <!--<h1 id="hi" style="position: absolute; top: 200%; background-color: beige;">hiiiiiiii</h1>-->
+        <h1 id="hi" style="position: absolute; top: 200%; background-color: beige;">hiiiiiiii</h1>
         <script src="homepageScript.js"></script>
     </body>
 </html>
