--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="viewport" content="width=100px, height=device-height, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home Page of Projects</title>
         <meta name="description" content="Home Website that presents all projects made by Cheng-I Lin">
         <link rel="stylesheet" href="style.css" />
+        <!--Used source from w3school-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link rel="icon" type="image/png" href="Project_Topics_-_Google_Slides_-_Google_Chrome_2022_1_10_上午_12_07_19__2_-removebg-preview (1).png"/>
     </head>
@@ -204,12 +205,14 @@
                     <ul>
                         <li>Driving Force</li>
                         <li>Dynamic Information Network</li>
+                        <!--See if should keep this-->
                         <li>U.S. Constitution App</li>
                         <li>Keyboard Madness</li>
                         <li>Space Survivor</li>
                         <li>Climate Rage</li>
                     </ul>
-                    <strong>*The order depicts the approximate order of release of each project</strong>
+                    *The order depicts the approximate order of release of each project<br><br>
+                    <!--<strong><a class="gameLink" href="https://cheng-i-lin.github.io/game_progress/">Click here to view the current progress of each project...</a></strong>-->
                 </div>
             </div>
             <div id="slideLeft"></div>
@@ -229,6 +232,8 @@
             <a class="navigationLinks" href="#whyCS">Why Computer Science</a>
             <a class="navigationLinks" href="#slideContainer">My Projects</a>
             <a class="navigationLinks" href="#footer">Contact Information</a>
+            <!--Unlock and lock for icon-->
+            <span id="navPosition"><i id="lockIcon" class="fa fa-unlock"></i></span>
         </div>
         <footer class="allDiv" id="footer">
             <br><br><h1>Contact Information</h1>
