--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                     <ul>
                         <li>Driving Force</li>
                         <li>Dynamic Information Network</li>
+                        <li>Progress Check</li>
                         <!--See if should keep this-->
                         <li>U.S. Constitution App</li>
                         <li>Keyboard Madness</li>
