add link to icon website

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Home Page of Projects</title>
         <meta name="description" content="Home Website that presents all projects made by Cheng-I Lin">
         <link rel="stylesheet" href="style.css" />
-        <!--Used source from w3school-->
+        <!--Used source from w3school, https://www.w3schools.com/icons/fontawesome_icons_brand.asp-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link rel="icon" type="image/png" href="Project_Topics_-_Google_Slides_-_Google_Chrome_2022_1_10_上午_12_07_19__2_-removebg-preview (1).png"/>
     </head>
