--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                     <strong><a class="gameLink" href="https://cheng-i-lin.github.io/multitasking/">Click here to play Multitasking now...</a></strong>
                 </div>
             </div>
+            <!--
             <div id="progression">
                 <div class="imgContainer">
                     <img class="slideImg">
@@ -196,7 +197,7 @@
                     <br><br>
                     <strong><a class="gameLink" href="https://cheng-i-lin.github.io/game_progress/">Click here to play Tower Progression now...</a></strong>
                 </div>
-            </div>
+            </div>-->
             <!--<div id="drivingForce">
                 
             </div>
