--- a/index.html
+++ b/index.html
@@ -190,10 +190,16 @@
                 <div class="textContainer">
                     <h1>Tower Progression</h1><br>
                     <strong>Game Inspiration:</strong><br>
-                    
+                    For this game, I wanted to make a game
                     <br><br>
                     <strong>Game Outline/Instruction:</strong><br>
-                    
+                    Wait and be patient. That's all you would have to do as the progress bar slowly fills up to. As soon as the
+                    progress bar value hits <strong>100%</strong>, a block would be generated from a random location and start falling down.
+                    If a block landed on top of another or on the ground, it would stop falling. By keep creating those blocks, 
+                    they would stack on top of each other, building towards a tall skyscraper made of blocks. As you reach a new 
+                    height, you would be awarded with <strong>XP</strong> points that you could utilize to upgrade your blocks in four
+                    different ways: increase block width, increase block height, increase progression speed, and increase the 
+                    probability of a random bonus. As the height increases, different types of blocks are unlocked. 
                     <br><br>
                     <strong><a class="gameLink" href="https://cheng-i-lin.github.io/game_progress/">Click here to play Tower Progression now...</a></strong>
                 </div>
@@ -222,8 +228,6 @@
                         <li>Tower Progression</li>
                         <li>Driving Force</li>
                         <li>Dynamic Information Network</li>
-                        <!--See if should keep this-->
-                        <li>U.S. Constitution App</li>
                         <li>Keyboard Madness</li>
                         <li>Space Survivor</li>
                         <li>Climate Rage</li>
@@ -268,3 +272,4 @@
         <script src="homepageScript.js"></script>
     </body>
 </html>
+<!--Add links from other games to this main website-->
