Finish writing progress section

--- a/index.html
+++ b/index.html
@@ -190,7 +190,10 @@
                 <div class="textContainer">
                     <h1>Tower Progression</h1><br>
                     <strong>Game Inspiration:</strong><br>
-                    For this game, I wanted to make a game
+                    For this game, I wanted to make a game that's different from my other projects. I then came up with the idea of 
+                    implementing a porgress bar when I saw another online game that uses the progress bar to gain points that allows
+                    the users to upgrade items. This inspired me to try to make a similar gaming environment, with a few slight
+                    changes that would make the process of waiting for the loading progress bar more interesting and enjoyable. 
                     <br><br>
                     <strong>Game Outline/Instruction:</strong><br>
                     Wait and be patient. That's all you would have to do as the progress bar slowly fills up to. As soon as the
@@ -198,8 +201,7 @@
                     If a block landed on top of another or on the ground, it would stop falling. By keep creating those blocks, 
                     they would stack on top of each other, building towards a tall skyscraper made of blocks. As you reach a new 
                     height, you would be awarded with <strong>XP</strong> points that you could utilize to upgrade your blocks in four
-                    different ways: increase block width, increase block height, increase progression speed, and increase the 
-                    probability of a random bonus. As the height increases, different types of blocks are unlocked. 
+                    different ways. As the height increases, different types of blocks are also unlocked as new achievements. 
                     <br><br>
                     <strong><a class="gameLink" href="https://cheng-i-lin.github.io/game_progress/">Click here to play Tower Progression now...</a></strong>
                 </div>
