code smasher update

--- a/index.html
+++ b/index.html
@@ -231,6 +231,29 @@
                 </div>
             </div>
         -->
+        <!--
+            <div id="codeSmash">
+                <div class="imgContainer">
+                    <img class="slideImg">
+                </div>
+                <div class="textContainer">
+                    <h1>Code Smasher</h1><br>
+                    <strong>Game Inspiration:</strong><br>
+                    After creating different types of games, I wanted to create a game where one game consists of multiple mini games,
+                    which could be quite fun and interesting. This allows users to be more flexible as to what they want to play.
+                    Moreover, those mini games are not a full length game, so users can enjoy playing relatively short games in a short
+                    amount of time. However, to make the game even more interesting, I placed the link to the game in a secret, yet
+                    obvious, location in the website. Good luck finding it. 
+                    <strong>Game Outline/Instruction:</strong><br>
+                    Code Smasher consists of five mini game modes: Protect the Bubble, Square Up, Trinity, Addition Equation, and Code
+                    Smasher. All these games can be played by clicking the matching icons in the introduction page of the game. For more
+                    information on how to play each game, visit the Code Smasher website and click on the <strong>Instructions</strong> 
+                    button that's right next to the <strong>Start</strong> button.
+                    <br><br>
+                    <strong>The path to Code Smasher is hidden in the website...</strong>
+                </div>
+            </div>
+        -->
             <div id="toBeContinue">
                 <div class="imgContainer">
                     <img class="slideImg">
@@ -252,6 +275,7 @@
                         <li>Keyboard Madness</li>
                         <li>Space Survivor</li>
                         <li>Climate Rage</li>
+                        <li>Code Smasher</li>
                         <li>Atlas: Project Uranus</li>
                     </ul>
                     *The order depicts the approximate order of release of each project<br><br>
