Add code smasher

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     Code Smasher consists of five mini game modes: Protect the Bubble, Square Up, Trinity, Addition Equation, and Code
                     Smasher. All these games can be played by clicking the matching icons in the introduction page of the game. For more
                     information on how to play each game, visit the Code Smasher website and click on the <strong>Instructions</strong> 
-                    button that's right next to the <strong>Start</strong> button.
+                    button that's right next to the <strong>Main Website</strong> button.
                     <br><br>
                     <strong>The path to Code Smasher is hidden in the website...</strong>
                 </div>
