update atlas game name

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     <strong>Game Outline/Instruction:</strong><br>
                     
                     <br><br>
-                    <strong><a class="gameLink" href="">Click here to play Atlas: Project Uranus now...</a></strong>
+                    <strong><a class="gameLink" href="">Click here for more information on Atlas: Project Uranus...</a></strong>
                 </div>
             </div>
         -->
