--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <img class="slideImg">
                 </div>
                 <div class="textContainer">
-                    <h1>Atlas: Project Uranus</h1><br>
+                    <h1>Atlas: Project Zeus</h1><br>
                     <strong>Game Inspiration:</strong><br>
                     For this project, I looked into many 3D games related to the environment to search for inspirations and ideas for
                     my first 3D project that targets the issues of air pollution. This is when I came across a 3D video game called
@@ -245,7 +245,7 @@
                     <strong>Game Outline/Instruction:</strong><br>
                     
                     <br><br>
-                    <strong><a class="gameLink" href="">Click here for more information on Atlas: Project Uranus...</a></strong>
+                    <strong><a class="gameLink" href="">Click here for more information on Atlas: Project Zeus...</a></strong>
                 </div>
             </div>
         -->
@@ -291,7 +291,7 @@
                         <li>Keyboard Madness</li>
                         <li>Space Survivor</li>
                         <li>Climate Rage</li>
-                        <li>Atlas: Project Uranus</li>
+                        <li>Atlas: Project Zeus</li>
                     </ul>
                     *The order depicts the approximate order of release of each project<br><br>
                 </div>
