meteor level prototype finished

--- a/index.html
+++ b/index.html
@@ -248,6 +248,31 @@
                     <strong><a class="gameLink" href="">Click here for more information on Atlas: Project Zeus...</a></strong>
                 </div>
             </div>
+            <div id="km">
+                <div class="imgContainer">
+                    <img class="slideImg">
+                </div>
+                <div class="textContainer">
+                    <h1>Keyboard Madness</h1><br>
+                    <strong>Game Inspiration:</strong><br>
+                    When I was young, I could recall playing a really interesting game involving the players to draw various uniquely shaped
+                    symbols that corresponds to the ballons with those similar symbols, which is attached to enemies falling from the sky. 
+                    By drawing out the symbols, the matching ballons will pop, dropping the enemy to the floor. As a kid, I was fascinated by
+                    this game, especially the quick reactions and drawing speeds that the player must possess in order to reach new high scores.
+                    This is why I decided to create a similar game using this concept.
+                    <br><br>
+                    <strong>Game Outline/Instruction:</strong><br>
+                    For this game, multiple objects, so called <strong>meteors</strong> will begin to fall from the top of the screen, each 
+                    embedded with a letter, digit, or symbol that could be accessed from the keyboard. The user will then have to type in the 
+                    corresponding inputs to terminate those meteors to score points before they reach the ground, which ends the game. As the
+                    score increases, so does the degree of difficulty. Fortunately, the player can always seek help from gadgets obtained from
+                    high scores or terminating meteors, which could then be used to assist the player in various ways. For more information on 
+                    the instructions or the gadgets, you can click on the <strong>Instructions</strong> or the <strong>Gadgets</strong> buttons 
+                    in the game.
+                    <br><br>
+                    <strong><a class="gameLink" href="https://cheng-i-lin.github.io/Keyboard_Madness/">Click here to play Keyboard Madness now...</a></strong>
+                </div>
+            </div>
         -->
             <div id="codeSmash">
                 <div class="imgContainer">
