added keyboard madness slide

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 Welcome to my home page site where I keep all of the projects that I had previously created. My name is <strong>Cheng-I(Alan) Lin</strong>
                 and I am passionate about computer science and its various appliances. I attend the school of <a href="https://www.astaichung.com/"><strong>AST</strong></a>, 
                 American School in Taichung, where I attended classes on computer science and learned how to code. Moreover, I studied and practiced coding 
-                using the language of <strong>HTML, CSS, JavaScript, Java, C++, and Python</strong> by myself as well, through the help of online sessions,
+                using the language of <strong>HTML, CSS, JavaScript, Java, C++, Python, and C#</strong> by myself as well, through the help of online sessions,
                 tutoring, and looking at codes/programs created by others online in platforms such as <a href="https://github.com/"><strong>GitHub</strong></a>. 
                 As I kept practicing and coding miscellaneous programs, I gradually began to grasp a understanding of how to create useful, meaningful,
                 interactive, and enjoyable programs, which then allowed me to start programming more complex projects with a larger scale.<br id="whyCS"><br>
@@ -66,6 +66,7 @@
                             <li>Multitasking</li>
                             <li>Tower Progression</li>
                             <li>Code Smasher</li>
+                            <li>Keyboard Madness</li>
                             <li>Many other more that are yet to come</li>
                         </strong>
                     </ul>
@@ -248,6 +249,29 @@
                     <strong><a class="gameLink" href="">Click here for more information on Atlas: Project Zeus...</a></strong>
                 </div>
             </div>
+        -->
+            <div id="codeSmash">
+                <div class="imgContainer">
+                    <img class="slideImg">
+                </div>
+                <div class="textContainer">
+                    <h1>Code Smasher</h1><br>
+                    <strong>Game Inspiration:</strong><br>
+                    After creating different types of games, I wanted to create a game where one game consists of multiple mini games,
+                    which could be quite fun and interesting. This allows users to be more flexible as to what they want to play.
+                    Moreover, those mini games are not a full length game, so users can enjoy playing relatively short games in a short
+                    amount of time. However, to make the game even more interesting, I placed the link to the game in a secret, yet
+                    obvious, location in the website. Good luck finding it.
+                    <br><br>
+                    <strong>Game Outline/Instruction:</strong><br>
+                    Code Smasher consists of five mini game modes: Protect the Bubble, Square Up, Trinity, Addition Equation, and Code
+                    Smasher. All these games can be played by clicking the matching icons in the introduction page of the game. For more
+                    information on how to play each game, visit the Code Smasher website and click on the <strong>Instructions</strong> 
+                    button that's right next to the <strong>Main Website</strong> button.
+                    <br><br>
+                    <strong>The path to Code Smasher is hidden in the website...</strong>
+                </div>
+            </div>
             <div id="km">
                 <div class="imgContainer">
                     <img class="slideImg">
@@ -273,29 +297,6 @@
                     <strong><a class="gameLink" href="https://cheng-i-lin.github.io/Keyboard_Madness/">Click here to play Keyboard Madness now...</a></strong>
                 </div>
             </div>
-        -->
-            <div id="codeSmash">
-                <div class="imgContainer">
-                    <img class="slideImg">
-                </div>
-                <div class="textContainer">
-                    <h1>Code Smasher</h1><br>
-                    <strong>Game Inspiration:</strong><br>
-                    After creating different types of games, I wanted to create a game where one game consists of multiple mini games,
-                    which could be quite fun and interesting. This allows users to be more flexible as to what they want to play.
-                    Moreover, those mini games are not a full length game, so users can enjoy playing relatively short games in a short
-                    amount of time. However, to make the game even more interesting, I placed the link to the game in a secret, yet
-                    obvious, location in the website. Good luck finding it.
-                    <br><br>
-                    <strong>Game Outline/Instruction:</strong><br>
-                    Code Smasher consists of five mini game modes: Protect the Bubble, Square Up, Trinity, Addition Equation, and Code
-                    Smasher. All these games can be played by clicking the matching icons in the introduction page of the game. For more
-                    information on how to play each game, visit the Code Smasher website and click on the <strong>Instructions</strong> 
-                    button that's right next to the <strong>Main Website</strong> button.
-                    <br><br>
-                    <strong>The path to Code Smasher is hidden in the website...</strong>
-                </div>
-            </div>
             <div id="toBeContinue">
                 <div class="imgContainer">
                     <img class="slideImg">
@@ -313,7 +314,6 @@
                     <ul>
                         <li>Driving Force</li>
                         <li>Dynamic Information Network</li>
-                        <li>Keyboard Madness</li>
                         <li>Space Survivor</li>
                         <li>Climate Rage</li>
                         <li>Atlas: Project Zeus</li>
@@ -331,6 +331,7 @@
             <div class="slideCircle" id="slide6"></div>
             <div class="slideCircle" id="slide7"></div>
             <div class="slideCircle" id="slide8"></div>
+            <div class="slideCircle" id="slide9"></div>
         </div>
         <!--Navigation on the top of the page, placed after banner to show the border line at bottom for separation-->
         <div class="allDiv" id="topNavigaion">
